# Whisper

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_CHECKLIST.md  AUDIT_IMPLEMENTATION.md  AUDIT_README.md  Cargo.toml  Dockerfile  FILE_INDEX.md  FINAL_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SETUP.md  STATUS.txt  audit_api.sh  docker-compose.yml  quickstart.sh  run_audit.sh
whisper-client/: Cargo.toml
whisper-client/examples/: scan_example.rs
whisper-client/src/: lib.rs
whisper-core/: Cargo.toml
whisper-core/src/: audit_tests.rs  bip352_test_vectors.json  lib.rs  tests.rs
whisper-server/: Cargo.toml  audit_database.sql
whisper-server/migrations/: 001_initial_schema.sql
whisper-server/src/: api.rs  config.rs  indexer.rs  main.rs
whisper-server/static/: app.js  index.html  style.css
