[workspace]
members = [
    "whisper-core",
    "whisper-server",
    "whisper-client",
]
resolver = "2"

[workspace.dependencies]
bitcoin = { version = "0.32", features = ["rand-std", "secp-recovery"] }
secp256k1 = { version = "0.29", features = ["global-context", "serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
