[package]
name = "whisper-client"
version = "0.1.0"
edition = "2021"

[dependencies]
whisper-core = { path = "../whisper-core" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
bitcoin = { workspace = true }
hex = "0.4"
