[package]
name = "whisper-server"
version = "0.1.0"
edition = "2021"

[dependencies]
whisper-core = { path = "../whisper-core" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
serde = { workspace = true }
serde_json = "1.0"
bitcoincore-rpc = "0.19"
zmq = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
config = "0.14"
bitcoin = { workspace = true }
hex = "0.4"
